--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
             </div>
         </div>
         <div class="right-slide">
-            <div style="background-image: url('bg1.jpg');"></div>
-            <div style="background-image: url('bg2.jpg');"></div>
-            <div style="background-image: url('bg3.jpg');"></div>
-            <div style="background-image: url('bg4.png');"></div>
-            <div style="background-image: url('bg5.jpg');"></div>
-            <div style="background-image: url('bg6.jpg');"></div>
-            <div style="background-image: url('bg7.jpg');"></div>
-            <div style="background-image: url('bg8.jpg');"></div>
+            <div style="background-image: url('images/bg1.jpg');"></div>
+            <div style="background-image: url('iamges/bg2.jpg');"></div>
+            <div style="background-image: url('images/bg3.jpg');"></div>
+            <div style="background-image: url('images/bg4.png');"></div>
+            <div style="background-image: url('images/bg5.jpg');"></div>
+            <div style="background-image: url('images/bg6.jpg');"></div>
+            <div style="background-image: url('images/bg7.jpg');"></div>
+            <div style="background-image: url('images/bg8.jpg');"></div>
         </div>
         <div class="action-buttons">
             <button class="down-button">
