Corrected some typos.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="right-slide">
             <div style="background-image: url('images/bg1.jpg');"></div>
-            <div style="background-image: url('iamges/bg2.jpg');"></div>
+            <div style="background-image: url('images/bg2.jpg');"></div>
             <div style="background-image: url('images/bg3.jpg');"></div>
             <div style="background-image: url('images/bg4.png');"></div>
             <div style="background-image: url('images/bg5.jpg');"></div>
